# screen-parse

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
screenparse/: __init__.py  accessibility.py  cli.py  element.py  image_parser.py  mcp_server.py  parser.py  utils.py
tests/: conftest.py  test_accessibility.py  test_element.py  test_image_parser.py  test_parser.py  test_utils.py
